Add interleaved parallel 3D Conv tests